--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
                 <h4>Please Enter the amount for donation</h4>
             </div>
             <ul class="donation-form-wrapper">
-                <li class="donation-inputs__amount form-row">
-                    <label for="donation--amount">Amount to Donate (£)
-                        <input type="number" id="donation--amount" name="donation--amount" min="0" max="1000">
+                <div class="donation-inputs__amount form-row">
+                    <label for="donation--amount">Amount to Donate (£):
+                        <input type="number" id="donation--amount" name="donation--amount" style="width: 100px;">
                     </label>
-                </li>
-                <li class="donation-inputs__type form-row">
-                    <label for="donation--type">Please Select a donation type
+                </div>
+                <div class="donation-inputs__type form-row">
+                    <label for="donation--type">Please Select a donation type:
                         <select name="donation--type" id="donation--type">
                             <div>
                                 <option hidden>Choose Donation type</option>
@@ -31,18 +31,24 @@
                             </div>
                         </select>
                     </label>
-                </li>
-                <li class="donation-inputs__result form-row">
-                    <label for="donation--result">Total
-                        <input type="number" id="donation--result" name="donation--result">
+                </div>
+                
+                <hr class="solid">
+
+                <div class="donation-inputs__button form-row">
+                        <button type="button" onclick="getInputValue()" id="donation--button" name="donation--button" style="width: 70px;">Calculate</button>
+                </div>
+                <div class="donation-inputs__result form-row">
+                    <label for="donation--result">Total:
+                        <input type="number" id="donation--result" name="donation--result" style="width: 100px;">
                     </label>
-                </li>
-                <li class="donation-inputs__result form-row">
+                </div>
+                <div class="donation-inputs__result form-row">
                     <label for="donation--resultAsTable">Results Table
                         <table>
                             <tr>
                                 <td>Amount(£)</td>
-                                <td>Split Type</td>
+                                <td>Spdivt Type</td>
                                 <td>Day 1</td>
                                 <td>Day 2</td>
                                 <td>Day 3</td>
@@ -68,10 +74,12 @@
                                 <td>Result 9</td>
                                 <td>Result 10</td>
                             </tr>
-
                         </table>
                     </label>
-                </li>
+                </div>
             </ul>
         </form>
     </div>
+    <script src="js/app.js"></script>
+</body>
+</html>
