--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <hr class="solid">
 
                 <div class="donation-inputs__button form-row">
-                        <button type="button" onclick="getInputValue()" id="donation--button" name="donation--button" style="width: 70px;">Calculate</button>
+                        <button type="button" onclick="getInputValues()" id="donation--button" name="donation--button" style="width: 70px;">Calculate</button>
                 </div>
                 <div class="donation-inputs__result form-row" style="padding-top: 20px;">
                     <label for="donation--resultAsTable">Results Table
