calculate button now disables after pressing to prevent multiple presses

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="donation-inputs__result form-row" style="padding-top: 20px;">
                     <label for="donation--resultAsTable">Results Table
                         <div style="padding-top: 20px;">
-                            <table id="tbl">
+                            <table id="donation-inputs__resultTable">
                                 <thead>
                                     <th>Amount(£)</th>
                                     <th>Split Type</th>
