--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                         </select>
                     </label>
                 </div>
+
+                <div class="donation-guide">
+                    <h3>Guide to donation types:</h3>
+                    <p><span class="donation-guide--highlighting">Equal: </span>The same amount to be donated every day</p>
+                    <p><span class="donation-guide--highlighting">More-Odd: </span>Double the amount to be donated on odd-numbered days</p>
+                </div>
                 
                 <hr class="solid">
 
