added (£) to results table heading

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <button type="button" onclick="calculateResults()" id="donation--button" name="donation--button" style="width: 70px;">Calculate</button>
                 </div>
                 <div class="donation-inputs__result form-row" style="padding-top: 20px;">
-                    <label for="donation--resultAsTable">Results Table
+                    <label for="donation--resultAsTable">Results Table (£)
                         <div style="padding-top: 20px;">
                             <table id="donation-inputs__resultTable">
                                 <thead>
