--- a/index.html
+++ b/index.html
@@ -40,9 +40,13 @@
                 <hr class="solid">
 
                 <div class="donation-inputs__button form-row">
-                        <button type="button" onclick="calculateResults()" id="donation--button" name="donation--button" style="width: 70px;">Calculate</button>
+                        <button type="submit" onclick="calculateResults()" id="donation--button" name="donation--button" style="width: 70px;">Calculate</button>
                 </div>
-                <div class="donation-inputs__result form-row" style="padding-top: 20px;">
+                
+            </div>
+        </form>
+
+        <div class="donation-inputs__result form-row" style="padding-top: 20px;">
                     <label for="donation--resultAsTable">Results Table (£)
                         <div style="padding-top: 20px;">
                             <table id="donation-inputs__resultTable">
@@ -67,13 +71,13 @@
                             </table>
                         </div>
                     </label>
-                </div>
 
-                <div class="donation-inputs__resetButton form-row" style="padding: 20px;">
-                    <button type="button" onclick="resetCalculator()" id="reset--button" name="reset--button" style="width: 70px;">Reset</button>
-                </div>
+            <div class="donation-inputs__resetButton" style="padding: 20px;">
+                <button type="button" onclick="resetCalculator()" id="reset--button" name="reset--button" style="width: 70px;">Reset</button>
             </div>
-        </form>
+        </div>
+
+               
     </div>
     <script src="js/app.js"></script>
 </body>
