--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Charity Donations</title>
     <link href="css/styles.css" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -16,7 +17,7 @@
             <div class="donation-form-wrapper">
                 <div class="donation-inputs__amount form-row">
                     <label for="donation--amount">Amount to Donate (£):
-                        <input type="number" id="donation--amount" name="donation--amount" style="width: 100px;" min="1" max="10000">
+                        <input type="number" id="donation--amount" name="donation--amount" style="width: 100px;" onkeypress="return isNumberKey(event, this)">
                     </label>
                 </div>
                 <div class="donation-inputs__type form-row">
