--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link
         href="css/styles.css"
         rel="stylesheet" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
 </head>
 
 <body>
@@ -26,7 +26,7 @@
                             id="donation--amount"
                             name="donation--amount"
                             style="width: 100px;"
-                            onkeypress="return isNumberKey(event, this)"
+                            onkeypress="return isNumberKey(event)"
                             oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                             maxlength="8">
                     </label>
