set min='1' on input so arrow keys couldn't reduce number below 0

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                             style="width: 100px;"
                             onkeypress="return isNumberKey(event)"
                             oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
+                            min="1"
                             maxlength="8">
                     </label>
                 </div>
